# MyPS4Controller

./: CMakeLists.txt  MyPS4Controller.code-workspace  sdkconfig
components/ps4_control/: CMakeLists.txt  ps4.c  ps4.h  ps4_l2cap.c  ps4_parser.c  ps4_parser.h  ps4_spp.c
main/: CMakeLists.txt  main.c
